<resources>
    <string name="app_name">Age In Minutes Calculator</string>
    <string name="calculate_your">calculate your</string>
    <string name="age">age</string>
    <string name="in_minutes">in minutes</string>
    <string name="button_select_date">select date</string>
    <string name="selected_date">Selected date</string>
    <string name="your_age_in_minutes">Your age in minutes</string>
</resources>