<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_red_dark"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_your"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        android:text="@string/age"
        android:textColor="@android:color/holo_orange_light"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_minutes"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonSelectDate"
        android:backgroundTint="@android:color/holo_orange_light"
        android:layout_width="match_parent"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:text="@string/button_select_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        tools:text="31.12.2000"
        android:textColor="@android:color/holo_orange_light"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/selected_date"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        tools:text="1000000"
        android:textColor="@android:color/holo_orange_light"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/your_age_in_minutes"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>